Load barrier slow path node should be MachTypeNode

XMLWordPrintable

    • b17

        # Internal Error (workspace/open/src/hotspot/share/opto/machnode.cpp:381), pid=4662, tid=4684
        # assert(tp->base() != Type::AnyPtr) failed: not a bare pointer
        #
        # JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-jdk13-jdk.316)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-jdk13-jdk.316, mixed mode, tiered, z gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x127ddb6] MachNode::adr_type() const+0x646
        #

        Command Line: -XX:MaxRAMPercentage=6 -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -XX:+IgnoreUnrecognizedVMOptions --add-opens=java.base/java.net=ALL-UNNAMED -Dseed=5532577772482251 -XX:MaxRAMPercentage=50 applications.runthese.Runner -duration 30 -runlist ./RunTheseTestList.dat

        Current CompileTask:
        C2:1762031 119083 4 java.lang.invoke.StringConcatFactory$MethodHandleInlineCopyStrategy::generate (497 bytes)

        Stack: [0x00007f93ec66b000,0x00007f93ec76c000], sp=0x00007f93ec766a60, free space=1006k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x127ddb6] MachNode::adr_type() const+0x646
        V [libjvm.so+0xd667da] PhaseCFG::insert_anti_dependences(Block*, Node*, bool)+0x5a
        V [libjvm.so+0xd6e528] PhaseCFG::schedule_late(VectorSet&, Node_Stack&)+0xb08
        V [libjvm.so+0xd6ebae] PhaseCFG::global_code_motion()+0x38e
        V [libjvm.so+0xd6fa61] PhaseCFG::do_global_code_motion()+0x51
        V [libjvm.so+0x9fe1ec] Compile::Code_Gen()+0x24c
        V [libjvm.so+0xa01fc5] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xe65
        V [libjvm.so+0x80701e] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xde
        V [libjvm.so+0xa0f5a2] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x402
        V [libjvm.so+0xa106d8] CompileBroker::compiler_thread_loop()+0x458
        V [libjvm.so+0x17afc1f] JavaThread::thread_main_inner()+0x2cf
        V [libjvm.so+0x17b8d8c] JavaThread::run()+0x1cc
        V [libjvm.so+0x17b65c0] Thread::call_run()+0x100
        V [libjvm.so+0x149eead] thread_native_entry(Thread*)+0x10d

          There are no Sub-Tasks for this issue.

              Assignee:
              Nils Eliasson (Inactive)
              Reporter:
              Vladimir Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: