8218468: Load barrier slow path node should be MachTypeNode

Reviewed-by: shade, pliden, kvn